--- a/calculator/calculator.css
+++ b/calculator/calculator.css
@@ -58,7 +58,8 @@ button {
   color: white;
   max-width: 300px;
   min-width: 230px;
-  border: 3px solid black
+  border: 3px solid black;
+  cursor: pointer;
 }
 
 input {
